Init umami analytics

--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -4,3 +4,9 @@
 {% when "katex" %}
 {% include katex.html %}
 {% endcase %}
+
+<head>
+
+<script defer src="https://cloud.umami.is/script.js" data-website-id="a6609cff-3661-42c4-a9d2-60d2b7b14f40"></script>
+
+</head>
